<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_screen_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/splashscreen_background"
            >

            <ImageButton
                android:id="@+id/cancelsearchresult"
                android:layout_width="70dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:background="@drawable/close_background"
                android:contentDescription="@string/close_result"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/amiko_semibold"
                android:gravity="center"
                android:text="@string/search_result"
                android:textColor="#FFF"
                android:textSize="13sp" />

        </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/search_result_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#ffffff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/found_a_rider_near_you"
                    android:textColor="@color/colorAccent"
                    android:padding="10dp"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                >

                <com.loopj.android.image.SmartImageView
                    android:id="@+id/resultCompanyLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/deli_s"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="2dp"
                    >

                    <TextView
                        android:id="@+id/companyname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:textSize="13sp"
                        android:textColor="@color/colorAccent"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-light"
                        />

                    <TextView
                        android:id="@+id/riderbikeregistration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_gs_234"
                        android:textSize="13sp"
                        android:textColor="@color/colorAccent"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-light"
                        />

                    <TextView
                        android:id="@+id/companyridername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rider_kwasi_amoako"
                        android:textSize="13sp"
                        android:textColor="@color/colorAccent"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-light"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="13dp"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#eceff1"
                    app:cardElevation="20dp"

                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_ghs"
                        android:textSize="13sp"
                        android:textColor="#000"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-light"
                        />
                    <TextView
                        android:id="@+id/transactionprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_15_0"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        android:textColor="#000"
                        android:padding="5dp"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginTop="30dp"
                        />
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                    android:id="@+id/confirmation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp"
                    android:text="@string/select_your_payment_method"
                    android:fontFamily="sans-serif-light"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp" />

                    <Button
                    android:id="@+id/confirm_payment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/confirm_button_bg"
                    android:text="@string/confirm_payment"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:visibility="invisible"
                    />
                    <Spinner
                    android:id="@+id/payment_choice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_input_signin"
                    android:spinnerMode="dropdown"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    >
                    </Spinner>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        >

                        <Button
                            android:id="@+id/make_payment"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="110dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/register_btn_background"
                            android:text="@string/confirm_payment"
                            android:textColor="#FFF"
                            android:textSize="13sp"
                            android:fontFamily="@font/amiko_semibold"
                            android:textAllCaps="false"
                            />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>